--- a/HelloFx/src/application/somexyz.fxml
+++ b/HelloFx/src/application/somexyz.fxml
@@ -1,59 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox alignment="TOP_CENTER" spacing="10" style="-fx-padding: 20;" 
-      xmlns="http://javafx.com/javafx/23.0.1" 
-      xmlns:fx="http://javafx.com/fxml/1" 
-      fx:controller="application.Controller"
-      maxWidth="Infinity"
-      maxHeight="Infinity"
->
-    <children>
-        <Label fx:id="titleLabel" style="-fx-font-size: 40px; -fx-font-weight: bold;" text="O que é Emergia?" />
+<ScrollPane fx:id="EmergiaTotalLabel" fitToHeight="false" fitToWidth="true" prefHeight="2610.0" prefWidth="841.0" style="-fx-background: #f6f8f0; -fx-background-color: #f6f8f0;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Controller">
+    <content>
+        <VBox alignment="TOP_CENTER" spacing="10" style="-fx-padding: 20;">
+            <children>
 
-        <Separator fx:id="separador1" prefHeight="2.0" />
+                <!-- Seção de introdução -->
+                <HBox alignment="CENTER" spacing="10">
+                    <children>
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@sustentabilidade.png" />
+                            </image>
+                        </ImageView>
+                        <Label style="-fx-font-size: 40px; -fx-font-weight: bold;" text="Emergia" />
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                            <image>
+                                <Image url="@sustentabilidade.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </HBox>
 
-        <Label fx:id="textLabel" style="-fx-font-size: 25px;" text="Emergia é um conceito usado para quantificar a energia consumida durante a produção de bens ou serviços, levando em consideração não apenas a energia direta utilizada, mas também a energia indireta envolvida em todo o processo de produção. A emergia é medida em unidades de energia solar equivalente (sej), ou seja, ela traduz toda a energia envolvida em um processo para uma quantidade equivalente de energia solar. Esse conceito é útil para avaliar o valor real dos recursos naturais e entender a sustentabilidade e eficiência dos sistemas produtivos em termos energéticos." textAlignment="JUSTIFY" wrapText="true" />
+                <Separator prefHeight="2.0" />
+            <VBox fx:id="RelatorioVBox1" alignment="TOP_CENTER" spacing="20" style="-fx-padding: 30;">
+               <children>
+                  <Label fx:id="graficoLabel" alignment="CENTER" maxWidth="Infinity" style="-fx-font-size: 30px; -fx-font-weight: bold;" text="Gráfico:" textAlignment="CENTER" wrapText="true" />
+                  <PieChart fx:id="chartPie" />
+               </children>
+            </VBox>
 
-        <Separator fx:id="separador2" prefHeight="2.0" />
-
-
-        <HBox alignment="CENTER" spacing="10">
-            <ImageView fx:id="Imagem1" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@sustentabilidade.png" />
-                </image>
-            </ImageView>
-            <Label fx:id="titleLabel2" style="-fx-font-size: 40px; -fx-font-weight: bold;" text="Calcular Emergia:" />
-            <ImageView fx:id="Imagem2" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@sustentabilidade.png" />
-                </image>
-            </ImageView>
-        </HBox>
-
-        <VBox alignment="CENTER" spacing="15" style="-fx-padding: 50 0 0 0;">
-            <HBox alignment="CENTER" spacing="20">
-                <Label fx:id="energia" minWidth="200" style="-fx-font-size: 25px;" text="Energia (J):" />
-                <TextField fx:id="myTextField1" prefWidth="400" style="-fx-font-size: 25px;" />
-            </HBox>
-
-            <HBox alignment="CENTER" spacing="20">
-                <Label fx:id="transformidade" minWidth="200" style="-fx-font-size: 25px;" text="Transformidade (sej/J):" />
-                <TextField fx:id="myTextField2" prefWidth="400" style="-fx-font-size: 25px;" />
-            </HBox>
-
-            <HBox alignment="CENTER">
-                <Button fx:id="MeuBotao" onAction="#switchToScene2" style="-fx-font-size: 25px;" text="Calcular Emergia" />
-            </HBox>
+            </children>
         </VBox>
-    </children>
-</VBox>
+        
+        
+    </content>
+</ScrollPane>
